--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ Updated: June 2023
 
 :root{
   /*variables*/
-  --color-purple: hsl(270, 17%, 50%);
+  /*--color-purple: hsl(270, 17%, 50%);*/
   --color-white: #EEE;
-  --color-dkpurp: #550077;
+  --color-ltblue: #aac9d4;
   --color-dkblue: #004F97;
   --color-gray: #CCC;
   --font-header: "Josefin Sans", sans-serif;
@@ -21,12 +21,13 @@ Updated: June 2023
     margin: 0; /*handles 100% width problem in welcome-section*/
     padding: 0;
     box-sizing: inherit;
+    text-align: center;
   }
   
   html
   {
     font-family: var(--font-header);
-    background-color: var(--color-teal);
+    background-color: var(--color-ltblue);
   }
   
   body
@@ -46,7 +47,7 @@ Updated: June 2023
     padding: 1em 2em;
     font-family: var(--font-header);
     font-size: 1.2em;
-    background: linear-gradient(170deg, var(--color-teal) 60%, var(--color-dkblue));
+    background: linear-gradient(90deg, var(--color-gray) 0%, var(--color-dkblue));
     box-shadow: 1px 2px 2px rgba(50, 50, 50, 0.5);
   }
   
@@ -72,7 +73,7 @@ Updated: June 2023
   
   a:hover, .project-tile .project-name:hover
   {
-    color: var(--color-gray);
+    color: var(--color-dkblue);
   }
   
   /*About*/
@@ -84,17 +85,16 @@ Updated: June 2023
     height: 100vh;
     width: 100%;
     padding: 0px;
-    background-color: var(--color-purple);
   }
   
   #sobre p
   {
     font-family: var(--font-header);
-    margin: 1.2em auto 1em auto;
     text-align: center;
-    font-size: 1.6em;
-    line-height: 1.5em;
+    font-size: 1.35em;
+    line-height: 1.4em;
     max-width: 350px;
+    margin: 1.2em auto 1em auto;
   }
   
   h1,h2,li
@@ -113,9 +113,21 @@ Updated: June 2023
   {
     font-size: 32px;
     margin-bottom: 0.8em;
+    color: var(--color-dkblue);
   }
   
-  /*Projects*/
+
+ #sobre
+  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    padding: 0px;
+  }
+
+  /*Items*/
   #items
   {
     text-align: center;
