--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 CSS3
 Author: Monica Jasper
 Date: April 2023
-Updated: June 2023
-
+Updated: July 2023
 */
 
 :root{
@@ -21,7 +20,7 @@ Updated: June 2023
     margin: 0; /*handles 100% width problem in welcome-section*/
     padding: 0;
     box-sizing: inherit;
-    text-align: center;
+    text-align: left;
   }
   
   html
@@ -155,7 +154,7 @@ Updated: June 2023
     border: solid black 0.5px;
     border-radius: 10px;
   }
-  */
+  
 
   .item-image
   {
@@ -165,6 +164,7 @@ Updated: June 2023
     border-top-right-radius: 10px;
     box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
   }
+*/
   
   .project-tile .project-name
   {
