--- a/style.css
+++ b/style.css
@@ -97,15 +97,13 @@ Updated: July 2023
   }
   
 
-
   /*Items*/
-  #ropa, #casa, #aficiones, #dinero, #otra
+  #ropa, #casa, #aficiones, #dinero, #otra, #sobre h2
   {
     display: in-line
     text-align: left;
     margin: 2em auto;
   }
-
 
 
   h1,h2,li
@@ -120,7 +118,11 @@ Updated: July 2023
     margin-bottom: 0.8em;
     color: var(--color-dkblue);
   }
-  
+
+  dd
+  {
+    margin-left = -2em;
+  }
   
   /*
   .project-tile .project-name
