--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 2em auto;
+    margin: 2em auto 2em 20%;
   }
 
 
