--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 4em auto;
+    margin: 2em auto;
   }
 
 
@@ -123,12 +123,12 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 2em auto 2em 2em;
+    margin: 2em auto 0 4em;
   }
 
   dd
   {
-    margin-left: 3em;
+    margin-left: 1em;
   }
 
   /*
