--- a/style.css
+++ b/style.css
@@ -123,12 +123,13 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 2em auto 0 4em;
+    margin: 0 auto 0 20%;
   }
 
   dd
   {
     margin-left: 1em;
+    margin-bottom: 0.5em;
   }
 
   /*
