second last style.css

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ Updated: July 2023
     top: 0px;
     right: 0px;
     width: 100%;
-    padding: 1em 2em;
+    padding: 0 2em;
     font-family: var(--font-header);
     font-size: 1.2em;
     background: linear-gradient(90deg, var(--color-gray) 0%, var(--color-dkblue));
@@ -102,7 +102,7 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    padding: 2em auto;
+    margin: 2em auto;
   }
 
 
@@ -128,7 +128,7 @@ Updated: July 2023
 
   dd
   {
-    margin: 0.4em 0 0.4em 1.2em;
+    margin: 0.5em 0 0.5em 1.5em;
   }
 
   /*
