--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ Updated: July 2023
   a
   {
     text-decoration: none;
-    color: inherit;
+    color: var(--color-ltblue);
   }
   
   a:visited, .project-name:visited
@@ -123,7 +123,7 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 0 auto 0 20%;
+    margin: 0.5em auto 0 20%;
   }
 
   dd
