--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ Updated: July 2023
   a
   {
     text-decoration: none;
-    color: var(--color-ltblue);
+    color: var(--color-dkblue);
   }
   
   a:visited, .project-name:visited
@@ -72,7 +72,7 @@ Updated: July 2023
   
   a:hover, .project-tile .project-name:hover
   {
-    color: var(--color-dkblue);
+    color: var(--color-gray);
   }
   
   /*About*/
