--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ Updated: July 2023
   --color-ltblue: #aac9d4;
   --color-dkblue: #004F97;
   --color-gray: #CCC;
+  --color-dkgray: #DDD;
   --font-header: "Josefin Sans", sans-serif;
   }  
     
@@ -72,7 +73,7 @@ Updated: July 2023
   
   a:hover, .project-tile .project-name:hover
   {
-    color: var(--color-gray);
+    color: var(--color-dkgray);
   }
   
   /*About*/
@@ -123,7 +124,7 @@ Updated: July 2023
   {
     display: in-line
     text-align: left;
-    margin: 0.5em auto 0 20%;
+    margin: 1em auto 1em 20%;
   }
 
   dd
