new colors style.css

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ Updated: July 2023
   --color-gray: #CCC;
   --color-dkgray: #BBB;
   --font-header: "Josefin Sans", sans-serif;
-  --color-crimon: #900;
-  --color-ltorange: #ffb700;
+  --color-crimson: #900;
+  --color-ltorange: #d56500;
   }  
     
   *
