--- a/style.css
+++ b/style.css
@@ -165,7 +165,8 @@ Updated: July 2023
   
   footer
   {
-    display: none;
+    text-align: center;
+    font-style: italic;
   }
   
   @media(max-height: 320px)
