--- a/style.css
+++ b/style.css
@@ -167,7 +167,8 @@ Updated: July 2023
   {
     text-align: center;
     font-style: italic;
-    margin-top: 5em;
+    font-size: 1.2em;
+    margin: 5em auto 2em auto;
   }
   
   @media(max-height: 320px)
